--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -139,6 +139,50 @@ footer {
   }
 }
 
+.profile-settings {
+  padding: 1rem;
+}
+
+.profile-settings h1 {
+  border-bottom: 1px solid grey;
+  margin-bottom: 25px;
+}
+
+.profile-settings img {
+  height: 180px;
+  width: 200px;
+}
+
+.profile-settings .btn {
+  width: 150px;
+}
+
+@media (min-width: 750px) {
+  .profile-settings {
+    border: 1px solid;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 73vh;
+  }
+  .profile-settings h1 {
+    margin-bottom: 50px;
+    margin-top: -40px;
+  }
+  .profile-settings .profile {
+    border-bottom: 1px solid grey;
+    -ms-grid-columns: 1fr 2fr;
+        grid-template-columns: 1fr 2fr;
+    padding-bottom: 30px;
+    display: -ms-grid;
+    display: grid;
+    gap: 20px;
+  }
+}
+
 footer {
   min-height: 55px;
 }
