Update profile functionality and authentication forms validation

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,14 +2,17 @@
 <app-navigation></app-navigation>
 
 <!-- _Page Content -->
-<section class="container main">
-	<router-outlet></router-outlet>
-</section>
+<article class="main">
+	<section class="container">
+		<router-outlet></router-outlet>
+	</section>
+</article>
 
 <!-- Footer -->
-<footer class="d-flex justify-content-center align-items-center">
+<!-- <footer class="d-flex justify-content-center align-items-center">
 	<div class="text-center pt-3 pb-3">
 		<small class="text-dark">Copyright &copy; 2021 - Authentication v1.0.0</small><br>
 		<small>Django Rest Framework & Angular 11</small>
 	</div>
-</footer>
+</footer> -->
+
