--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,6 +1,10 @@
-<div class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center">
-	<div class="container text-center">
-		<h1 class="display-4">Welcome my Friend <br><i class="far fa-lg fa-laugh-beam text-danger mt-3"></i></h1>
-		<p class="lead mt-5" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">This will be the start of your project after signin</p>
+<div class="jumbotron jumbotron-fluid">
+	<div class="text-center">
+		<h1 class="display-4">
+			<span class="text_pop">WELCOME &nbsp;<strong>{{username | uppercase}}</strong> </span>
+			<br>
+			<mdb-icon far icon="grin-beam" class="text_shadow mt-3 mb-3"></mdb-icon>
+		</h1>
+		<p class="lead text_pop mt-5" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">This will be the start of your project after signin</p>
 	</div>
 </div>
