--- a/frontend/src/app/components/notfound/notfound.component.html
+++ b/frontend/src/app/components/notfound/notfound.component.html
@@ -1,6 +1,14 @@
-<div class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center">
-	<div class="container text-center">
-		<h1 class="display-4">Oops!! <br><i class="far fa-lg fa-grin-beam-sweat text-warning mt-3"></i></h1>
-		<p class="lead mt-5" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">You took a wrong turn there my friend</p>
+<div class="jumbotron jumbotron-fluid">
+	<div class="text-center">
+		<h1 class="display-4">
+			<span class="text_pop">Oops!!</span> 
+			<br>
+			<mdb-icon fas icon="frown" class="text_shadow mt-3 mb-3"></mdb-icon>
+			<br>
+			<span class="text_pop">4</span>
+			<span class="text_pop">0</span>
+			<span class="text_pop">4</span>
+		</h1>
+		<p class="lead text_pop mt-5" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">You took a wrong turn there my friend</p>
 	</div>
 </div>
