Containarizing the project on Docker

--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -2,7 +2,7 @@
 	<div class="profile-settings">
 		<div class="profile">
 			<div>
-				<img id="profile_link" alt="{{username}}" class="img-fluid rounded-circle d-block mx-auto" src="">
+				<img id="profile_link" alt="{{username}}" class="img-fluid rounded-circle d-block mx-auto" src="" loading="lazy">
 				
 				<h5>{{title}}</h5>
 				<div class="d-flex justify-content-center">
