Fixing the router guards

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <!--Navbar-->
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light" [containerInside]="false">
 	<mdb-navbar-brand>
-		<a class="navbar-brand" routerLink="/">
+		<a class="navbar-brand" routerLink="home">
 			<img src="https://nolan-web-profile.s3.amazonaws.com/static/images/nksimple.png" loading="lazy" width="200" height="60" loading="lazy">
 		</a>
 	</mdb-navbar-brand>
