--- a/frontend/src/app/components/notfound/notfound.component.html
+++ b/frontend/src/app/components/notfound/notfound.component.html
@@ -10,5 +10,6 @@
 			<span class="text_pop">4</span>
 		</h1>
 		<p class="lead text_pop mt-5" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">You took a wrong turn there my friend</p>
+		<a mdbBtn routerLink="/home" role="button" color="info" outline="true" mdbWavesEffect>Back To Home</a>
 	</div>
 </div>
