Change background to night

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!-- _Page Content -->
 <article class="main">
 	<section class="container">
-		<router-outlet></router-outlet>
+		<!-- <router-outlet></router-outlet> -->
 	</section>
 </article>
 
