--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-light" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-light" [containerInside]="true">
 	<mdb-navbar-brand>
 		<a class="navbar-brand" routerLink="home">
 			<img src="https://nolan-web-profile.s3.amazonaws.com/static/images/nksimple.png" loading="lazy" width="200" height="60" loading="lazy">
